--- a/blog/resources/sass/partials/_common.scss
+++ b/blog/resources/sass/partials/_common.scss
@@ -1,13 +1,22 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     height: 100vh;
 }
 
-.container{
+.container {
     width: 80%;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    li {
+        display: inline;
+    }
 }
